--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -1,7 +1,8 @@
 <html>
 <body>
-    <script text="text/javascrpt" src="./js/codigo.js"
+    <script text="text/javascrpt" src="./js/codigo.js"></script>
     <p>Hola</p>
     <p>Soy Jose Manuel</p>
+    <input type="button" onclick="saludo()" value="saludo"></input>
 </body>
 </html>
