añado css a ejercicio1.html en rama css

--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -1,6 +1,7 @@
 <html>
 <body>
     <script text="text/javascrpt" src="./js/codigo.js"></script>
+    <link rel="stylesheet" type="text/css" href="./css/estilo.css"/>
     <p>Hola</p>
     <p>Soy Jose Manuel</p>
     <input type="button" onclick="saludo()" value="saludo"></input>
